--- a/Scripting data/Test.ipynb
+++ b/Scripting data/Test.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNmlv4/PANHynPoASFeFpnB",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Haris-Setyo/Technical-Support-Engineer-Settlement/blob/main/Test.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,15 +12,18 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# **Scripting data**"
-      ],
       "metadata": {
         "id": "d6MWejxk2Qmi"
-      }
+      },
+      "source": [
+        "# **Scripting data**"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "v-SpiVy92f6J"
+      },
       "source": [
         "Gunakanlah Python dan pandas untuk menyelesaikan soal dibawah, termasuk penggabungan\n",
         "beberapa file dan pembersihan data untuk memudahkan analisis.\n",
@@ -50,22 +37,22 @@
         "*   quantity\n",
         "*   price\n",
         "*   customer_id"
-      ],
-      "metadata": {
-        "id": "v-SpiVy92f6J"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**Beberapa tugas yang perlu Anda lakukan adalah:**"
-      ],
       "metadata": {
         "id": "WTtRDYhn3CKG"
-      }
+      },
+      "source": [
+        "**Beberapa tugas yang perlu Anda lakukan adalah:**"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "uODEm3wD3JX8"
+      },
       "source": [
         "Gabungkan semua file CSV menjadi satu DataFrame.\n",
         "Bersihkan data dengan cara berikut:\n",
@@ -76,19 +63,58 @@
         "hasilnya ke file baru total_sales_per_branch.csv dengan kolom branch dan total.\n",
         "Berikut adalah file CSV yang perlu Anda gabungkan: branch_a.csv, branch_b.csv,\n",
         "branch_c.csv"
-      ],
-      "metadata": {
-        "id": "uODEm3wD3JX8"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": 9,
       "metadata": {
         "id": "-u6PCVuU3lGz"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'pandas'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbranch_a.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(df\u001b[38;5;241m.\u001b[39mhead())\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+          ]
+        }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "df = pd.read_csv('branch_a.csv')\n",
+        "print(df.head())"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyNmlv4/PANHynPoASFeFpnB",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.9"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
