--- a/Scripting data/Test.ipynb
+++ b/Scripting data/Test.ipynb
@@ -61,34 +61,95 @@
         "3. Hilangkan duplikat berdasarkan transaction_id, pilih data berdasarkan date terbaru.\n",
         "4. Setelah data duplikat dihilangkan, hitung total penjualan per cabang dan simpan\n",
         "hasilnya ke file baru total_sales_per_branch.csv dengan kolom branch dan total.\n",
-        "Berikut adalah file CSV yang perlu Anda gabungkan: branch_a.csv, branch_b.csv,\n",
-        "branch_c.csv"
+        "\n",
+        "Berikut adalah file CSV yang perlu Anda gabungkan: branch_a.csv, branch_b.csv,branch_c.csv"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {
-        "id": "-u6PCVuU3lGz"
-      },
-      "outputs": [
-        {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'pandas'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbranch_a.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(df\u001b[38;5;241m.\u001b[39mhead())\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-          ]
-        }
-      ],
+      "execution_count": 21,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "\n",
-        "df = pd.read_csv('branch_a.csv')\n",
-        "print(df.head())"
+        "# Assuming the file is uploaded to Colab\n",
+        "dfa = pd.read_csv('branch_a.csv')\n",
+        "dfb = pd.read_csv('branch_b.csv')\n",
+        "dfc = pd.read_csv('branch_c.csv')\n",
+        "\n",
+        "frames = [dfa, dfb, dfc]\n",
+        "\n",
+        "data = pd.concat(frames)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "1. Hapus baris yang memiliki nilai NaN pada kolom transaction_id, date, dan customer_id."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 22,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "clean_data = data.dropna()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "2. Ubah format kolom date menjadi tipe datetime."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "clean_data.loc[:,'date'] = clean_data['date'].apply(pd.to_datetime)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "3. Hilangkan duplikat berdasarkan transaction_id, pilih data berdasarkan date terbaru."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "data_sortby = clean_data.sort_values(by='date', ascending=True)\n",
+        "\n",
+        "data_deldul = data_sortby.drop_duplicates(subset='transaction_id', keep='first')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "4. Setelah data duplikat dihilangkan, hitung total penjualan per cabang dan simpan\n",
+        "hasilnya ke file baru total_sales_per_branch.csv dengan kolom branch dan total."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "result = data_deldul.groupby('branch')['price'].sum()\n",
+        "\n",
+        "result.to_csv('total_sales_per_branch.csv', index=False)"
       ]
     }
   ],
@@ -112,7 +173,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.9"
+      "version": "3.10.12"
     }
   },
   "nbformat": 4,
