--- a/Scripting data/Test.ipynb
+++ b/Scripting data/Test.ipynb
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -92,7 +92,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -108,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -124,11 +124,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [],
       "source": [
-        "data_sortby = clean_data.sort_values(by='date', ascending=True)\n",
+        "data_sortby = clean_data.sort_values(by='date', ascending=False)\n",
         "\n",
         "data_deldul = data_sortby.drop_duplicates(subset='transaction_id', keep='first')"
       ]
@@ -143,7 +143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [],
       "source": [
