--- a/Scripting data/Test.ipynb
+++ b/Scripting data/Test.ipynb
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -91,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -107,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -123,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -142,11 +142,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
-        "result = data_deldul.groupby('branch')['price'].sum()\n",
+        "result = data_deldul.groupby('branch')['price'].sum().reset_index()\n",
         "\n",
         "result.to_csv('total_sales_per_branch.csv', index=False)"
       ]
